coupons of deals

--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -20,7 +20,6 @@
       <strong>Coupon</strong><!--(Coupons or Deals)-->
     </div>
     <div class="inner">
-      
       <p><a target="_blank" href="https://amzn.to/2GDUFvg">Amazon Sales & Coupons, February 2019</a></p>
       <em>These Amazon coupons of the day to save as much as 70% on Grocery, Health & Beauty, Electronics, Home Improvement, and more. Simply click on the category of coupons you want, and clipping coupons.</em>
       <span>Expiration: on going</span>
@@ -29,6 +28,36 @@
       <a target="_blank" href="https://amzn.to/2GDUFvg">Shop Now</a>
     </div>
  </div>
+
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <p><span>20%</span><br /><em>OFF</em></p>
+      <strong>Sale</strong>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2TDgO4q">Up to 20% Off Subscribe & Save</a></p>
+      <em>Save up to 20% and receive FREE shipping on thousands of products. Easily manage your subscriptions</em>
+      <span>Expiration: 02/19/2020 CDT.</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2TDgO4q">Shop Now</a>
+    </div>
+</div>
+  
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <p><span>45%</span><br /><em>OFF</em></p>
+      <strong>Sale</strong>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2O0XFnd">Amazon | Today's Deals</a></p>
+      <em>You can find great deals from Amazon's Today’s Deals regardless of whether you are looking for items for yourself or your family and friends.</em>
+      <span>Expiration: on going</span>
+    </div> 
+    <div class="deal_btn">
+      <a href="https://amzn.to/2O0XFnd">Shop Now</a>
+    </div>
+</div>
 
 <div class="card clearfix" data-tags="Category">
     <div class="info_box">
@@ -45,4 +74,51 @@
       <a href="Site_Link">Shop Now</a>
     </div>
 </div>
-  
+
+<div class="card clearfix" data-tags="Category">
+    <div class="info_box">
+      <p><span>Percentage%</span><br /><em>OFF</em></p>
+      <strong>Category</strong>
+    </div>
+    <div class="inner">
+      
+      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
+      <em>Coupons_Description</em>
+      <span>Expiration: Coupons_Date</span>
+    </div> 
+    <div class="deal_btn">
+      <a href="Site_Link">Shop Now</a>
+    </div>
+</div>
+
+<div class="card clearfix" data-tags="Category">
+    <div class="info_box">
+      <p><span>Percentage%</span><br /><em>OFF</em></p>
+      <strong>Category</strong>
+    </div>
+    <div class="inner">
+      
+      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
+      <em>Coupons_Description</em>
+      <span>Expiration: Coupons_Date</span>
+    </div> 
+    <div class="deal_btn">
+      <a href="Site_Link">Shop Now</a>
+    </div>
+</div>
+
+<div class="card clearfix" data-tags="Category">
+    <div class="info_box">
+      <p><span>Percentage%</span><br /><em>OFF</em></p>
+      <strong>Category</strong>
+    </div>
+    <div class="inner">
+      
+      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
+      <em>Coupons_Description</em>
+      <span>Expiration: Coupons_Date</span>
+    </div> 
+    <div class="deal_btn">
+      <a href="Site_Link">Shop Now</a>
+    </div>
+</div>
