--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -99,6 +99,7 @@
   .coupons .coupons_wrap{margin:20px 0 0 0;}
   .coupons .coupons_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
   .coupons .coupons_wrap .card .info_box{border-right:1px solid #ccc;float:left;width:18%;height:100px;padding:1.5% 0;margin:0 1%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .info_box p{font-size:30px;font-weight:bold;line-height:1.2;margin:3px 20px;}
   .coupons .coupons_wrap .card .info_box em{}
   .coupons .coupons_wrap .card .info_box .img_box{height:100px;padding:0;}
@@ -107,7 +108,8 @@
   .coupons .coupons_wrap .card .inner{border-right:1px solid #ccc;float:left;width:57%;padding:1.5%;}
   .coupons .coupons_wrap .card .inner p{font-size:17px;font-weight:bold;line-height:1.2;margin-top:5px;}
   .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#000;}
-  .coupons .coupons_wrap .card .inner em{display:block;margin:7px 0;}
+  .coupons .coupons_wrap .card .inner em{display:block;margin:7px 0;font-size:13px;}
+  .coupons .coupons_wrap .card .inner em>a{text-decoration:none;color:#08f;}
   .coupons .coupons_wrap .card .inner span{}
   .coupons .coupons_wrap .card .deal_btn{float:left;width:15%;padding:1%;text-align:center;margin:50px 0;}
   .coupons .coupons_wrap .card .deal_btn a{text-decoration:none;color:#000;border:1px solid;padding:10px 17px;}
@@ -138,7 +140,7 @@
 
 @media screen and (min-width:641px) and (max-width:1199px){
   .coupons .rt_cnt .cnt_box.on{display:none;}
-  .coupons .coupons_wrap .card .info_box{width:15%;}
+  .coupons .coupons_wrap .card .info_box{width:23%;}
   .coupons .coupons_wrap .card .info_box p{font-size:25px;padding:10px 0;}
   .coupons .coupons_wrap .card .deal_btn{width:18%;}
   .coupons .coupons_wrap .card .deal_btn a{padding:5px 10px;}
