--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -1,10 +1,12 @@
-<!-- <div class="card clearfix" data-tags="Category">
+<!-- no image
+<div class="card clearfix" data-tags="Category">
     <div class="info_box">
-      <p><span>Percentage%</span><br /><em>OFF</em></p>
-      <strong>Category</strong>
+      <a target="_blank" href="Site_Link">
+        <p><span>Percentage%</span><br /><em>OFF</em></p>
+        <strong>Category</strong>
+      </a>
     </div>
     <div class="inner">
-      
       <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
       <em>Coupons_Description</em>
       <span>Expiration: Coupons_Date</span>
@@ -12,15 +14,40 @@
     <div class="deal_btn">
       <a href="Site_Link">Shop Now</a>
     </div>
-</div> -->
+</div>
+ -->
 
-<div class="card clearfix" data-tags="Coupons"><!--(Coupons or Deals)-->
+<!-- with image
+<div class="card clearfix" data-tags="Category">
     <div class="info_box">
-      <p>70%<br /><em>OFF</em></p>
-      <strong>Coupon</strong><!--(Coupons or Deals)-->
+      <div class="img_box">
+         <a target="_blank" href="Site_Link">
+          <img src="Deals_Image" alt="" /> 
+         </a>
+      </div>
+      <strong>Category</strong>
     </div>
     <div class="inner">
-      <p><a target="_blank" href="https://amzn.to/2GDUFvg">Amazon Sales & Coupons, February 2019</a></p>
+      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
+      <em>Coupons_Description</em>
+      <span>Expiration: Coupons_Date</span>
+    </div> 
+    <div class="deal_btn">
+      <a href="Site_Link">Shop Now</a>
+    </div>
+</div>
+ -->
+
+<div class="card clearfix" data-tags="Coupons"><!--(Coupons or Deals)-->
+    
+    <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2GDUFvg">
+        <p>70%<br /><em>OFF</em></p>
+        <strong>Coupon</strong><!--(Coupons or Deals)-->
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2GDUFvg">Amazon | Sales & Coupons, February 2019</a></p>
       <em>These Amazon coupons of the day to save as much as 70% on Grocery, Health & Beauty, Electronics, Home Improvement, and more. Simply click on the category of coupons you want, and clipping coupons.</em>
       <span>Expiration: on going</span>
     </div> 
@@ -31,23 +58,27 @@
 
 <div class="card clearfix" data-tags="Sale">
     <div class="info_box">
-      <p><span>20%</span><br /><em>OFF</em></p>
-      <strong>Sale</strong>
+      <a target="_blank" href="https://amzn.to/2TDgO4q">
+        <p><span>20%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
     </div>
     <div class="inner">
-      <p><a target="_blank" href="https://amzn.to/2TDgO4q">Up to 20% Off Subscribe & Save</a></p>
+      <p><a target="_blank" href="https://amzn.to/2TDgO4q">Amazon | Up to 20% Off Subscribe & Save</a></p>
       <em>Save up to 20% and receive FREE shipping on thousands of products. Easily manage your subscriptions</em>
       <span>Expiration: 02/19/2020 CDT.</span>
     </div> 
     <div class="deal_btn">
-      <a target="_blank" href="https://amzn.to/2TDgO4q">Shop Now</a>
+      <a target="_blank" target="_blank" href="https://amzn.to/2TDgO4q">Shop Now</a>
     </div>
 </div>
   
 <div class="card clearfix" data-tags="Sale">
     <div class="info_box">
-      <p><span>45%</span><br /><em>OFF</em></p>
-      <strong>Sale</strong>
+      <a target="_blank" href="https://amzn.to/2O0XFnd">
+        <p><span>45%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
     </div>
     <div class="inner">
       <p><a target="_blank" href="https://amzn.to/2O0XFnd">Amazon | Today's Deals</a></p>
@@ -55,70 +86,129 @@
       <span>Expiration: on going</span>
     </div> 
     <div class="deal_btn">
-      <a href="https://amzn.to/2O0XFnd">Shop Now</a>
+      <a target="_blank" href="https://amzn.to/2O0XFnd">Shop Now</a>
     </div>
 </div>
 
-<div class="card clearfix" data-tags="Category">
+<div class="card clearfix" data-tags="Sale">
     <div class="info_box">
-      <p><span>Percentage%</span><br /><em>OFF</em></p>
-      <strong>Category</strong>
+      <a target="_blank" href="https://amzn.to/2W3MMnv">
+        <p><span>70%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
     </div>
     <div class="inner">
-      
+      <p><a target="_blank" href="https://amzn.to/2W3MMnv">Amazon | Lightning Deals</a></p>
+      <em>Since Lightning Deals are time-sensitive, it's important to complete your order as soon as possible. </em>
+      <span>Expiration: on going</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2W3MMnv">Shop Now</a>
+    </div>
+</div>
+
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2O2aXjc">
+        <p><span>30%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2O2aXjc">Amazon | 30% Off Beauty&Health</a></p>
+      <em>Up to 30% off Beauty&Health</em>
+      <span>Expiration: on going</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2O2aXjc">Shop Now</a>
+    </div>
+</div>
+
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <div class="img_box">
+         <a target="_blank" href="https://amzn.to/2UIg7Dm">
+          <img src="https://images.unsplash.com/photo-1538022890810-8f4000ca9a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
+         </a>
+      </div>
+      <strong>Sale</strong>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2UIg7Dm">Amazon | KOREAN BEAUTY</a></p>
+      <em>Amazon offers various Korean Beauty brands. From Skin Care to Makeup and curated the innovative Korean Beauty products from the most wanted brands including COSRX, The Face Shop, Etude House, Skederm, Dermal and Nature Republic.</em>
+      <span>Expiration: on going</span>
+    </div> 
+    <div class="deal_btn">
+      <a href="https://amzn.to/2UIg7Dm">Shop Now</a>
+    </div>
+</div>
+
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2O2ywbK">
+        <p><span>80%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2O2ywbK">Amazon | Up to 80% off Warehouse Products</a></p>
+      <em>Amazon Warehouse offers deals on hundreds of thousands of warehouse-damaged, returned, open-box, and pre-owned items.<br /><a target="_blank" href="https://amzn.to/2TBHgeN">[see warehouse products condition]</a></em>
+      <span>Expiration: on going</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2O2ywbK">Shop Now</a>
+    </div>
+</div>
+
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2O51wiS">
+        <p><span>60%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2O51wiS">Amazon | Up to 60% off amazon fashion</a></p>
+      <em>Save up to 60% off on clothing, shoes, jewelry, watches, and more.</em>
+      <span>Expiration: on going</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2O51wiS">Shop Now</a>
+    </div>
+</div>
+
+
+<div class="card clearfix" data-tags="Category">
+    <div class="info_box">
+      <a target="_blank" href="Site_Link">
+        <p><span>Percentage%</span><br /><em>OFF</em></p>
+        <strong>Category</strong>
+      </a>
+    </div>
+    <div class="inner">
       <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
       <em>Coupons_Description</em>
       <span>Expiration: Coupons_Date</span>
     </div> 
     <div class="deal_btn">
-      <a href="Site_Link">Shop Now</a>
+      <a target="_blank" href="Site_Link">Shop Now</a>
     </div>
 </div>
 
+
 <div class="card clearfix" data-tags="Category">
     <div class="info_box">
-      <p><span>Percentage%</span><br /><em>OFF</em></p>
-      <strong>Category</strong>
+      <a target="_blank" href="Site_Link">
+        <p><span>Percentage%</span><br /><em>OFF</em></p>
+        <strong>Category</strong>
+      </a>
     </div>
     <div class="inner">
-      
       <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
       <em>Coupons_Description</em>
       <span>Expiration: Coupons_Date</span>
     </div> 
     <div class="deal_btn">
-      <a href="Site_Link">Shop Now</a>
-    </div>
-</div>
-
-<div class="card clearfix" data-tags="Category">
-    <div class="info_box">
-      <p><span>Percentage%</span><br /><em>OFF</em></p>
-      <strong>Category</strong>
-    </div>
-    <div class="inner">
-      
-      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
-      <em>Coupons_Description</em>
-      <span>Expiration: Coupons_Date</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="Site_Link">Shop Now</a>
-    </div>
-</div>
-
-<div class="card clearfix" data-tags="Category">
-    <div class="info_box">
-      <p><span>Percentage%</span><br /><em>OFF</em></p>
-      <strong>Category</strong>
-    </div>
-    <div class="inner">
-      
-      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
-      <em>Coupons_Description</em>
-      <span>Expiration: Coupons_Date</span>
-    </div> 
-    <div class="deal_btn">
-      <a href="Site_Link">Shop Now</a>
+      <a target="_blank" href="Site_Link">Shop Now</a>
     </div>
 </div>
