--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -178,7 +178,7 @@
 </div>
 
 
-<div class="card clearfix" data-tags="Category">
+<!-- <div class="card clearfix" data-tags="Category">
     <div class="info_box">
       <a target="_blank" href="Site_Link">
         <p><span>Percentage%</span><br /><em>OFF</em></p>
@@ -211,4 +211,4 @@
     <div class="deal_btn">
       <a target="_blank" href="Site_Link">Shop Now</a>
     </div>
-</div>
+</div> -->
