--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -88,5 +88,8 @@
   /*.on_gadgets .card_wrap .start{top:-45px;}*/
 }
 
-
+.form_border{width:70%;margin:0 auto;}
+.form_border input, .form_border textarea{width:100%;height:50px;margin-bottom:20px;}
+.form_border .form_select{margin-bottom:20px;}
+.form_border .form_btn{width:40%;}
 
