--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -1,30 +1,29 @@
-  <%= simple_form_for @gadget do |f| %>
+ <div class="layout"><!--layout-->
+  <div class="wrap">
+    <%= simple_form_for @gadget do |f| %>
 
-   <div class="form_border">
-    <%= f.collection_select :category_id, Category.all, :id, :name, { prompt: "Choose a category" } %>
-   </div>
+     <div class="form_border">
+       <div class="form_select">
+        <%= f.collection_select :category_id, Category.all, :id, :name, { prompt: "Choose a category" } %>
+       </div>
 
-   <div class="form_border">
-    <%= f.input :gg_title, label: 'Title' %>
-    <%= f.input :gg_intro, label: 'Intro' %>
-    <%= f.input :gg_img, label: 'Image URL' %>
-    <%= f.input :gg_url, label: 'Product URL' %>
-    <%= f.input :gg_from, label: 'Product Source' %>
-   </div>
+       <div class="form_input">
+        <%= f.input :gg_title, label: 'Title' %>
+        <%= f.input :gg_intro, label: 'Intro' %>
+        <%= f.input :gg_img, label: 'Image URL' %>
+        <%= f.input :gg_url, label: 'Product URL' %>
+        <%= f.input :gg_from, label: 'Product Source' %>
+        <%= f.input :gg_aprice, label: 'Current Price' %>
+        <%= f.input :gg_youtube01, label: 'Youtube First' %>
+       </div>
+          
+       <div class="form_btn">
+        <%= f.button :submit %>
+       </div>
+       
+      </div>
+    <% end %>
+  </div>
+</div>
+
    
-   <div class="form_border">
-    <%= f.input :gg_aprice, label: 'Current Price' %>
-   </div>
-
-   <div class="form_border">
-    <%= f.input :gg_youtube01, label: 'Youtube First' %>
-   </div>
-
-      
-   <div class="form_btn">
-    <%= f.button :submit %>
-   </div>
-  <% end %>
-
-
- 
