--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -5,7 +5,7 @@
   <div class="inner">
     <span class="regular"><em>percentage% OFF +</em> free shipping</span>
     
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
@@ -17,14 +17,67 @@
  -->
 
 
-<div class="card clearfix" data-score="percentage" data-price="price">
+<div class="card clearfix" data-score="30" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ckd8tV"><img src="https://m.media-amazon.com/images/I/71EcVkHR3+L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Ckd8tV">Clip on Mini Desk Fan</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $19.99</strong> using code:30NZH8CO</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ckd8tV">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FjOtY4"><img src="https://m.media-amazon.com/images/I/61eOkcvfloL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2FjOtY4">OURS Women's Casual T-Shirts Round Neck Button Side Long Sleeve Tunic Tops</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $14.99</strong> using code:40GMCL7X</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2FjOtY4">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="50" data-price="9.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UCXW25"><img src="https://m.media-amazon.com/images/I/81IzxychQxL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2UCXW25">prodcut_description</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $9.98</strong> using code:50XPALIR</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UCXW25">Copy & Use code</a>
+  </div>
+</div>
+
+
+<!-- <div class="card clearfix" data-score="percentage" data-price="price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
   </div>
   <div class="inner">
     <span class="regular"><em>percentage% OFF +</em> free shipping</span>
     
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
@@ -42,7 +95,7 @@
   <div class="inner">
     <span class="regular"><em>percentage% OFF +</em> free shipping</span>
     
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
@@ -60,7 +113,7 @@
   <div class="inner">
     <span class="regular"><em>percentage% OFF +</em> free shipping</span>
     
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
@@ -78,7 +131,7 @@
   <div class="inner">
     <span class="regular"><em>percentage% OFF +</em> free shipping</span>
     
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
+    <p><a target="_blank" href="product_link">prodcut_description</a></p>
     <div class="code_high">
       <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
     </div>
@@ -87,57 +140,4 @@
     <a target="_blank" href="product_link">Copy & Use code</a>
   </div>
 </div>
-
-
-<div class="card clearfix" data-score="percentage" data-price="price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
-    
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
-    <div class="code_high">
-      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
-    </div>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="product_link">Copy & Use code</a>
-  </div>
-</div>
-
-
-<div class="card clearfix" data-score="percentage" data-price="price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
-    
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
-    <div class="code_high">
-      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
-    </div>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="product_link">Copy & Use code</a>
-  </div>
-</div>
-
-
-<div class="card clearfix" data-score="percentage" data-price="price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
-    
-    <p><a target="_blank" href="https://amzn.to/2IaH1lI">prodcut_description</a></p>
-    <div class="code_high">
-      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
-    </div>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="product_link">Copy & Use code</a>
-  </div>
-</div>
+ -->
