--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -178,6 +178,24 @@
 </div>
 
 
+<div class="card clearfix" data-tags="Sale">
+    <div class="info_box">
+      <a target="_blank" href="https://amzn.to/2CsbFSb">
+        <p><span>70%</span><br /><em>OFF</em></p>
+        <strong>Sale</strong>
+      </a>
+    </div>
+    <div class="inner">
+      <p><a target="_blank" href="https://amzn.to/2CsbFSb">70% off ZORJAR Women Fashion</a></p>
+      <em>Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Scarves For Womens,29"x78"Wool Winter Scarf Women Shawl-ZORJAR Pure Wool Stripe Loop Yarn Soft Scarf Fashion Scarves Long Sc…</em>
+      <span>Expiration: Mar 31, 2019 at 11:59 PM PDT</span>
+    </div> 
+    <div class="deal_btn">
+      <a target="_blank" href="https://amzn.to/2CsbFSb">Shop Now</a>
+    </div>
+</div>
+
+
 <!-- <div class="card clearfix" data-tags="Category">
     <div class="info_box">
       <a target="_blank" href="Site_Link">
@@ -194,21 +212,4 @@
       <a target="_blank" href="Site_Link">Shop Now</a>
     </div>
 </div>
-
-
-<div class="card clearfix" data-tags="Category">
-    <div class="info_box">
-      <a target="_blank" href="Site_Link">
-        <p><span>Percentage%</span><br /><em>OFF</em></p>
-        <strong>Category</strong>
-      </a>
-    </div>
-    <div class="inner">
-      <p><a target="_blank" href="Site_Link">Coupons_Title</a></p>
-      <em>Coupons_Description</em>
-      <span>Expiration: Coupons_Date</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="Site_Link">Shop Now</a>
-    </div>
-</div> -->
+ -->
