--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,7 +16,6 @@
 </div>
  -->
 
-
 <div class="card clearfix" data-score="30" data-price="19.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Ckd8tV"><img src="https://m.media-amazon.com/images/I/71EcVkHR3+L._SR400,400_.jpg" alt="" /></a>
@@ -70,7 +69,181 @@
 </div>
 
 
-<!-- <div class="card clearfix" data-score="percentage" data-price="price">
+<div class="card clearfix" data-score="58" data-price="11.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TJx4Be"><img src="https://m.media-amazon.com/images/I/81jhcX1wxAL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2TJx4Be">Kinesiology Tape</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>58% off at $11.89</strong> using code:58ZFY6HG</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2TJx4Be">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="50" data-price="13.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y7rsPy"><img src="https://m.media-amazon.com/images/I/81WGxVDAcZL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2Y7rsPy">Jack Skellington Plush Doll</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $13.98</strong> using code:50ZOCBWO</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y7rsPy">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="58" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TK9cNH"><img src="https://m.media-amazon.com/images/I/61OyO0E5rvL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2TK9cNH">Selfie Ring Light,Oternal Rechargeable Portable Clip-on Selfie Fill Light with 36 LED for iPhone Android Smart Phone Photography</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>58% off at $13.99</strong> using code:58OPTD46</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2TK9cNH">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="50" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FdxOEq"><img src="https://m.media-amazon.com/images/I/81OHTLcAZ7L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2FdxOEq">Clear Purse, iSPECLE Clear Bag Stadium Approved for NFL PGA Inside Pocket</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $8.99</strong> using code:5097TPYU</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2FdxOEq">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TLbWug"><img src="https://m.media-amazon.com/images/I/71f-UNLeV8L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2TLbWug">MEKBOK Wine Bottle Fairy Lights with Cork 5 Lighting Modes + Timer 6 Pack Copper Wire String Starry LED Lights for Bottle DIY...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>35% off at $12.99</strong> using code:352VG6FW</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2TLbWug">Copy & Use code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="60" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Fj8w8a"><img src="https://m.media-amazon.com/images/I/810ymZWEQAL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2Fj8w8a">Baconlor Dog Leash Belt Waist Wearing - Durable Strong Safe Bungee Dog Leash </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $16.99</strong> using code:60IAKRG4</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Fj8w8a">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y37iWV"><img src="https://m.media-amazon.com/images/I/81CnumqZe7L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2Y37iWV">Igmis Pure Raw Honey 52.9 ounces</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>35% off at $21.99</strong> using code:35Y28BF6</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y37iWV">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="47" data-price="88.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OacdRk"><img src="https://m.media-amazon.com/images/I/71CuNuNmHSL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>47% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2OacdRk">Sabrent Universal Docking Station with Stand for Tablets and Notebooks Supports PC</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>47% off at $88.49</strong> using code:477MQSPF</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2OacdRk">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="78.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OdQpEk"><img src="https://m.media-amazon.com/images/I/61xOkDcxVlL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2OdQpEk">Phenyx Pro UHF Wireless Microphone System,1 Handheld Mic 1 Headset Mic 1 Lapel Mic Combo, Portable Size...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $78.99</strong> using code:10PHENYX51</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2OdQpEk">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="product_link"><img src="https://m.media-amazon.com/images/I/61kll9TZeZL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="product_link">prodcut_description</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>65% off at $39.99</strong> using code:65AC8BWD</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="product_link">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="percentage" data-price="price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
   </div>
@@ -86,7 +259,6 @@
     <a target="_blank" href="product_link">Copy & Use code</a>
   </div>
 </div>
-
 
 <div class="card clearfix" data-score="percentage" data-price="price">
   <div class="image_box">
@@ -106,38 +278,5 @@
 </div>
 
 
-<div class="card clearfix" data-score="percentage" data-price="price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
-    
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
-    </div>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="product_link">Copy & Use code</a>
-  </div>
-</div>
 
 
-<div class="card clearfix" data-score="percentage" data-price="price">
-  <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
-    
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
-    <div class="code_high">
-      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
-    </div>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="product_link">Copy & Use code</a>
-  </div>
-</div>
- -->
