--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -243,7 +243,7 @@
   </div>
 </div>
 
-<div class="card clearfix" data-score="percentage" data-price="price">
+<!-- <div class="card clearfix" data-score="percentage" data-price="price">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
   </div>
@@ -280,3 +280,4 @@
 
 
 
+ -->
