--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -243,41 +243,254 @@
   </div>
 </div>
 
-<!-- <div class="card clearfix" data-score="percentage" data-price="price">
+<div class="card clearfix" data-score="20" data-price="49.99">
   <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+    <a target="_blank" href="https://amzn.to/2OeQ4Bv"><img src="https://m.media-amazon.com/images/I/81jPYPSINaL._SR400,400_.jpg" alt="" /></a>
   </div>
   <div class="inner">
-    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
     
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
+    <p><a target="_blank" href="https://amzn.to/2OeQ4Bv">Windscreen4less Heavy Duty Privacy Screen Fence in Color Beige</a></p>
     <div class="code_high">
-      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
+      <p><span>Take <strong>20% off at $49.99</strong> using code:20WINDSCREEN</span></p>
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2OeQ4Bv">Copy & Use code</a>
   </div>
 </div>
 
-<div class="card clearfix" data-score="percentage" data-price="price">
+<div class="card clearfix" data-score="50" data-price="22.99">
   <div class="image_box">
-    <a target="_blank" href="product_link"><img src="product_img" alt="" /></a>
+    <a target="_blank" href="https://amzn.to/2OceSKi"><img src="https://m.media-amazon.com/images/I/81c3LzvIV6L._SR400,400_.jpg" alt="" /></a>
   </div>
   <div class="inner">
-    <span class="regular"><em>percentage% OFF +</em> free shipping</span>
-    
-    <p><a target="_blank" href="product_link">prodcut_description</a></p>
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2OceSKi">HollyHOME Luxury Checkered Super Soft Solid Single Pinsonic Quilted Bed Quilt Bedspread Bed Cover</a></p>
     <div class="code_high">
-      <p><span>Take <strong>percentage% off at $price</strong> using code:promo_code</span></p>
+      <p><span>Take <strong>50% off at $22.99</strong> using code:50YJWLUH</span></p>
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="product_link">Copy & Use code</a>
+    <a target="_blank" href="https://amzn.to/2OceSKi">Copy & Use code</a>
   </div>
 </div>
 
+<div class="card clearfix" data-score="15" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y6mgLS"><img src="https://m.media-amazon.com/images/I/71WfPy1cquL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Y6mgLS">Large Stainless Steel French Press Coffee Maker</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $24.99</strong> using code:15FRENCH</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y6mgLS">Copy & Use code</a>
+  </div>
+</div>
 
+<div class="card clearfix" data-score="10" data-price="37.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OdSdxe"><img src="https://m.media-amazon.com/images/I/71c+3ufvdkL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2OdSdxe">101 Oz (3L) Airpot Thermal Coffee Carafe/Lever Action/Stainless Steel Insulated Thermos / 12 Hour Heat Retention / 24 Hour Cold Retention</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $37.99</strong> using code:10AIRPOT</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2OdSdxe">Copy & Use code</a>
+  </div>
+</div>
 
+<div class="card clearfix" data-score="15" data-price="15.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2CtyftP"><img src="https://m.media-amazon.com/images/I/51oOIlVOE8L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2CtyftP">USB Wall Charger,Moallia 2-Pack Dual Port USB Power Adapter Wall Charger Plug Compatible </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $15.98</strong> using code:15B24LTE</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2CtyftP">Copy & Use code</a>
+  </div>
+</div>
 
- -->
+<div class="card clearfix" data-score="50" data-price="15.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Fioe36"><img src="https://m.media-amazon.com/images/I/61vUmqzM11L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2Fioe36">Taymanso Universal 360° Swive Car Air Vent Phone Mount Holder Cradle</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $15.98</strong> using code:50IBY1ZJ</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Fioe36">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2uegiuG"><img src="https://m.media-amazon.com/images/I/51KaoLMBA8L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2uegiuG">Acumen Dash Cam for Cars 1080P FHD Driving Recorder Vehicle Dashboard Camera</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $29.99</strong> using code:30X5646E</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2uegiuG">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="119.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y9X1rX"><img src="https://m.media-amazon.com/images/I/81mj2flJP9L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2Y9X1rX">Rugged Geek RG1000 Safety GEN2 1000A Portable Car Jump Starter</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $119.99</strong> using code:20RGDGEEK</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y9X1rX">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="79.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ufpsqP"><img src="https://m.media-amazon.com/images/I/71jHRpdJg1L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2ufpsqP">Hippococo Teepee Tent for Kids</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $79.97</strong> using code:15TEEPEE14</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ufpsqP">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TXHgVL"><img src="https://images-na.ssl-images-amazon.com/images/I/41mopmWqN1L.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2TXHgVL">MR.TORCH BTS-8071 Trigger Start Handy Gas Welding Torch Head</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $39.99</strong> using code:10QWLRRD</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2TXHgVL">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="35.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2uePESt"><img src="https://m.media-amazon.com/images/I/61ELbulaQoL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2uePESt">ZORJAR Wool Winter Women Scarf Soft Pointed Twill Fashion Long Scarves</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $35.99</strong> using code:70N8SOPE</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2uePESt">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="80.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y91dZ9"><img src="https://m.media-amazon.com/images/I/81TDxuPz-kL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2Y91dZ9">VIJUVE Anti Aging Face Massager for Wrinkles Appearance Removal & Facial Skin Tightening </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $80.00</strong> using code:20EJRNX7</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y91dZ9">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="35.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2CsSd85"><img src="https://m.media-amazon.com/images/I/81S0ICWl4LL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2CsSd85">VIJUVE Anti Aging Face Massager for Wrinkles Appearance Removal & Facial Skin Tightening </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $35.00</strong> using code:20EJRNX7</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2CsSd85">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="18.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ui4mYZ"><img src="https://m.media-amazon.com/images/I/71PS-OVkCGL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2ui4mYZ">VitaFiber IMO Syrup - Prebiotic Fiber Lower Calorie Sweetener - Sugar Alternative - 30 fl oz</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $18.99</strong> using code:15VITAFIBER</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ui4mYZ">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y8rXsH"><img src="https://m.media-amazon.com/images/I/71RXpuTzK9L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    
+    <p><a target="_blank" href="https://amzn.to/2Y8rXsH">VitaFiber IMO Powder - Prebiotic Fiber Sweetener – Sugar Alternative - 2.2 lbs</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $19.99</strong> using code:15VITAFIBER</span></p>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Y8rXsH">Copy & Use code</a>
+  </div>
+</div>
