--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -61,7 +61,7 @@
 
                      
                       <h4><a target="_blank" href="<%= gadget.gg_url %>"><%= gadget.gg_title %></a></h4>
-                      <p><%= gadget.gg_intro %></p>
+                      <!-- <p><%= gadget.gg_intro %></p> -->
                       <div class="btn clearfix">
                         <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
                       </div>
