--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -9,10 +9,10 @@
 
        <div class="form_input">
         <%= f.input :gg_title, label: 'Title' %>
-        <%= f.input :gg_intro, label: 'Intro' %>
+        <!--<%= f.input :gg_intro, label: 'Intro' %>-->
         <%= f.input :gg_img, label: 'Image URL' %>
         <%= f.input :gg_url, label: 'Product URL' %>
-        <%= f.input :gg_from, label: 'Product Source' %>
+        <!--<%= f.input :gg_from, label: 'Product Source' %>-->
         <%= f.input :gg_aprice, label: 'Current Price' %>
         <%= f.input :gg_youtube01, label: 'Youtube First' %>
        </div>
