--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -120,6 +120,7 @@
 .cu_wrap .detitle h2{font-size:30px;display:inline;border-bottom:0.4em solid rgba(0,168,225,0.2);position:relative;}
 .cu_wrap .detitle h2 span{position:relative;top:0.4em;}
 .cu_wrap .detitle p{width:60%;margin:20px auto;}
+.cu_wrap .detitle .admin a{text-decoration:none;color:#3d3d3d;margin-left:15px;}
 .cu_wrap .cu_box{margin:50px 0;border-bottom:1px solid #ccc;padding-bottom:50px;}
 .cu_wrap .num{float:left;width:200px;text-align:center;}
 .cu_wrap .num>p{font-size:100px;border-bottom:1px solid #3d3d3d;display:inline-block;line-height:1;}
