--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -35,12 +35,31 @@
                 <div class="btn clearfix">
                   <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
                 </div>
-                <% if can? :update, gadget %>
+
+                 <% if can? :update, gadget %>
                   <div class="btn clearfix admin">
                     <em><%= link_to "Edit", edit_gadget_path(gadget) %></em><%= link_to "Delete", gadget_path(gadget), method: :delete, data: {confirm: "Are you sure?"}%>
                   </div>
                 <% end %>
                 
+
+                <script type="text/javascript">
+                amzn_assoc_placement = "adunit0";
+                amzn_assoc_tracking_id = "3628-20";
+                amzn_assoc_ad_mode = "search";
+                amzn_assoc_ad_type = "smart";
+                amzn_assoc_marketplace = "amazon";
+                amzn_assoc_region = "US";
+                amzn_assoc_title = "Shop Related Products";
+                amzn_assoc_default_search_phrase = "<%= gadget.gg_title %>";
+                amzn_assoc_default_category = "All";
+                amzn_assoc_linkid = "d5db913e7c544a6da6995c4c28898530";
+                amzn_assoc_rows = "4";
+                amzn_assoc_design = "text_links";
+                </script>
+                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+
+               
               </section>
             </div>
           <% end %>
