--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -36,14 +36,7 @@
                   <em>$<%= gadget.gg_aprice %></em><a target="_blank" href="<%= gadget.gg_url %>">Buy Now</a>
                 </div>
 
-                 <% if can? :update, gadget %>
-                  <div class="btn clearfix admin">
-                    <em><%= link_to "Edit", edit_gadget_path(gadget) %></em><%= link_to "Delete", gadget_path(gadget), method: :delete, data: {confirm: "Are you sure?"}%>
-                  </div>
-                <% end %>
-                
-
-                <script type="text/javascript">
+                <!-- <script type="text/javascript">
                 amzn_assoc_placement = "adunit0";
                 amzn_assoc_tracking_id = "3628-20";
                 amzn_assoc_ad_mode = "search";
@@ -57,7 +50,7 @@
                 amzn_assoc_rows = "4";
                 amzn_assoc_design = "text_links";
                 </script>
-                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+                <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> -->
 
                
               </section>
