--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -52,7 +52,7 @@
                 </script>
                 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script> -->
 
-               
+               <script async defer data-pin-hover="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
               </section>
             </div>
           <% end %>
