--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -26,6 +26,7 @@
   .gadgets .card_wrap .card-header{padding:5px;}
   .gadgets .card_wrap .card-body{padding:10px;}
   .gadgets .card_wrap .card-body h4{margin:15px 0;}
+  .gadgets .card_wrap .card-body .pinterest{display:none;}
   .gadgets .card_wrap .start{top:-45px;}
 }
 
