--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -58,7 +58,7 @@
   .codes .rt_cnt .sort_box ul li a{border-radius:10px;text-decoration:none;color:#fff;display:block;background:#000;text-align:center;padding:5px;}
  
   .codes .card_wrap{column-width:170px;column-gap:5px;}
-  .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:15px;padding:5px;box-shadow: 0px 0.5px 0.5px rgba(0,0,0,0.5);text-align:center;border-radius:10px;}
+  .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;text-align:center;border-bottom:1px solid #ddd;}
   .codes .card_wrap .card .image_box img{width:100%;}
   .codes .card_wrap .card .inner{padding:7px;}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
@@ -123,18 +123,19 @@
   .coupons .rt_cnt .cnt_box button:hover{border-bottom:1px solid;color:#000;}
   /*.coupons .coupons_wrap{column-width:170px;column-gap:5px;}*/
   .coupons .coupons_wrap .card{border-radius:5px;display:inline-block;margin:0;margin-bottom:15px;padding:5px;box-shadow: 1px 1px 3px rgba(0,0,0,0.5);}
-  .coupons .coupons_wrap .card .info_box{float:none;width:100%;padding:10px 0;text-align:center;background:#fff;color:#000;}
-  .coupons .coupons_wrap .card .info_box p{font-size:25px;font-weight:500;line-height:1.2;margin:3px 20px;}
-  .coupons .coupons_wrap .card .inner p{font-weight:600;}
+  .coupons .coupons_wrap .card .info_box{float:left;width:30%;padding:10px 5%;text-align:center;background:#fff;color:#000;}
+  .coupons .coupons_wrap .card .info_box p{font-size:25px;font-weight:500;line-height:1.2;}
   .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .info_box em{}
+  .coupons .coupons_wrap .card .info_box a{text-decoration:none;color:#000;}
   .coupons .coupons_wrap .card .info_box .img_box{height:auto;padding:0;}
   .coupons .coupons_wrap .card .info_box img{width:100%;height:auto;}
-  .coupons .coupons_wrap .card .info_box strong{background:#000;color:#fff;border-radius:10px;padding:0 10px;display:block;width:50%;margin:5px auto;}
-  .coupons .coupons_wrap .card .inner{float:none;width:100%;padding:0;}
-  .coupons .coupons_wrap .card .inner p{font-size:15px;line-height:1.2;margin-top:10px;word-break:break-all;}
+  .coupons .coupons_wrap .card .info_box strong{background:#000;color:#fff;border-radius:10px;padding:0 10px;display:block;margin:5px auto;}
+  .coupons .coupons_wrap .card .inner{float:left;width:69.5%;padding:0;}
+  .coupons .coupons_wrap .card .inner p{font-weight:600;font-size:15px;line-height:1.2;margin-top:10px;word-break:break-all;border-bottom:1px solid #ddd;padding-bottom:5px;}
   .coupons .coupons_wrap .card .inner em{display:block;margin:10px 0;}
-  .coupons .coupons_wrap .card .deal_btn{float:none;width:100%;padding:0;margin:10px 0;}
+  .coupons .coupons_wrap .card .inner span{font-size:11px;color:#ddd;border-bottom:1px solid #ddd;padding-bottom:3px;display:block;}
+  .coupons .coupons_wrap .card .deal_btn{float:right;padding:0;margin:10px 0;}
   .coupons .coupons_wrap .card .deal_btn a{text-decoration:none;color:#000;border:1px solid;padding:5px 17px;}
 }
 
