--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -58,7 +58,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promo Codes on Amazon Feb. 10. 2019</h2>
+          <h2>Promo Codes on Amazon 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
