--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -81,6 +81,7 @@
              </div><!--./card_wrap-->
          </div><!--./on_gadgets-->
         </main>
+        <%= will_paginate @gadgets %>
       </div><!--./wrap-->
   </div><!--./gadgets_wrapper-->
 </div><!--./layout-->
