--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -11,6 +11,9 @@
   .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#08f;display:block;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a>span{font-size:13px;}
 
+  .codes .lt_cnt .today_code{padding:8px 0;background:#000;margin:5px 0;text-align:center;}
+  .codes .lt_cnt .today_code a{text-decoration:none;color:#fff;display:block;}
+
   .codes .lt_cnt .lt_sort_box{display:none;}
   .codes .lt_cnt .lt_sort_box.on{display:block;position:fixed;top:80px;width:270px;}
   .codes .lt_cnt .lt_sort_box p{border-bottom:1px solid;}
@@ -22,6 +25,8 @@
   .codes .rt_cnt .sort_box{margin-bottom:20px;}
   .codes .rt_cnt .sort_box ul li{float:left;width:100px;margin:0 5px;border:1px solid;border-radius:10px;}
   .codes .rt_cnt .sort_box ul li a{border-radius:10px;text-decoration:none;color:#000;display:block;background:#fff;text-align:center;padding:5px;}
+
+  .codes .lt_cnt .day_day{}
 
   .codes .card_wrap{margin:20px 0 0 0;}
   .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
@@ -48,6 +53,9 @@
   .codes .lt_cnt .toggle>ul>li>ul{display:none;list-style:decimal;padding-left:17px;}
   .codes .lt_cnt .toggle>ul>li>ul>li{padding:5px 10px;list-style: decimal;}
   .codes .lt_cnt .toggle>ul>li>ul>li>a{text-decoration:none;color:#08f;display:block;}
+
+  .codes .lt_cnt .today_code{padding:8px 0;background:#000;margin:5px 0;text-align:center;}
+  .codes .lt_cnt .today_code a{text-decoration:none;color:#fff;display:block;}
 
   .codes .lt_cnt .lt_sort_box{display:none;}
   .codes .rt_cnt .sort_box{margin:10px 0;}
