--- a/app/views/promocodes_days/day_01.html.erb
+++ b/app/views/promocodes_days/day_01.html.erb
@@ -8,7 +8,7 @@
         <div class="lt_cnt">
           <h2>Promotion Codes</h2>
           
-         <div class="toggle">
+          <div class="toggle">
             <ul>
               <li>
                 <a href="#n">NOTES</a>
@@ -41,8 +41,11 @@
                 </ul>
               </li>
             </ul>
+
           </div><!--./toggle-->
-          
+          <div class="today_code">
+           <a href="/deals/promo_codes">Today's PromoCodes</a>
+          </div>
           
           <div class="lt_sort_box clearfix">
             <ul class="clearfix">
@@ -58,7 +61,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promo Codes on Amazon 2019</h2>
+          <h2>Apr. 10. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -72,7 +75,7 @@
           
          
           <div class="card_wrap sort-list">
-            <%= render 'deals/body_promocode' %>
+            <%= render 'promocodes_days/day_01' %>
           </div>
           
         </div><!--./rt_cnt-->    
