--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -55,7 +55,9 @@
               amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_01 %>";
               amzn_assoc_default_category = "All";
               amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-              amzn_assoc_design = "in_content";
+              amzn_assoc_title = "Shop Related Products";
+              amzn_assoc_rows = "4";
+              amzn_assoc_design = "text_links";
               </script>
               <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
@@ -92,7 +94,9 @@
               amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_02 %>";
               amzn_assoc_default_category = "All";
               amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-              amzn_assoc_design = "in_content";
+              amzn_assoc_title = "Shop Related Products";
+              amzn_assoc_rows = "4";
+              amzn_assoc_design = "text_links";
               </script>
               <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
@@ -129,7 +133,9 @@
               amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_03 %>";
               amzn_assoc_default_category = "All";
               amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-              amzn_assoc_design = "in_content";
+              amzn_assoc_title = "Shop Related Products";
+              amzn_assoc_rows = "4";
+              amzn_assoc_design = "text_links";
               </script>
               <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
@@ -166,7 +172,9 @@
               amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_04 %>";
               amzn_assoc_default_category = "All";
               amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-              amzn_assoc_design = "in_content";
+              amzn_assoc_title = "Shop Related Products";
+              amzn_assoc_rows = "4";
+              amzn_assoc_design = "text_links";
               </script>
               <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
@@ -203,7 +211,9 @@
               amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_05 %>";
               amzn_assoc_default_category = "All";
               amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-              amzn_assoc_design = "in_content";
+              amzn_assoc_title = "Shop Related Products";
+              amzn_assoc_rows = "4";
+              amzn_assoc_design = "text_links";
               </script>
               <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
             </div>
@@ -241,7 +251,9 @@
                 amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_06 %>";
                 amzn_assoc_default_category = "All";
                 amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-                amzn_assoc_design = "in_content";
+                amzn_assoc_title = "Shop Related Products";
+                amzn_assoc_rows = "4";
+                amzn_assoc_design = "text_links";
                 </script>
                 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
               </div>
@@ -280,7 +292,9 @@
                 amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_07 %>";
                 amzn_assoc_default_category = "All";
                 amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-                amzn_assoc_design = "in_content";
+                amzn_assoc_title = "Shop Related Products";
+                amzn_assoc_rows = "4";
+                amzn_assoc_design = "text_links";
                 </script>
                 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
               </div>
@@ -319,7 +333,9 @@
                 amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_08 %>";
                 amzn_assoc_default_category = "All";
                 amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-                amzn_assoc_design = "in_content";
+                amzn_assoc_title = "Shop Related Products";
+                amzn_assoc_rows = "4";
+                amzn_assoc_design = "text_links";
                 </script>
                 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
               </div>
@@ -358,10 +374,12 @@
                 amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_09 %>";
                 amzn_assoc_default_category = "All";
                 amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-                amzn_assoc_design = "in_content";
+                amzn_assoc_title = "Shop Related Products";
+                amzn_assoc_rows = "4";
+                amzn_assoc_design = "text_links";
                 </script>
                 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
-              </div>
+            </div>
             </div>
           </div>
         <% end %>
@@ -397,7 +415,9 @@
                 amzn_assoc_default_search_phrase = "<%= @recommend.sub_title_10 %>";
                 amzn_assoc_default_category = "All";
                 amzn_assoc_linkid = "9d3ca2a44b0fd375ff97003e1c85d8d2";
-                amzn_assoc_design = "in_content";
+                amzn_assoc_title = "Shop Related Products";
+                amzn_assoc_rows = "4";
+                amzn_assoc_design = "text_links";
                 </script>
                 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
               </div>
