--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -138,7 +138,7 @@
 .cu_wrap .inner .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:30px;}
 
 .show_more_box h2{margin-bottom:5px;}
-.show_more_ctn{float:left;width:31.33%;margin:0 1% 30px 1%;}
+.show_more_ctn{float:left;width:31.33%;height:450px;margin:0 1% 30px 1%;}
 .show_more_ctn a{text-decoration:none;color:#3d3d3d;}
 .show_more_ctn img{width:100%;height:300px;object-fit:cover;}
 .show_more_ctn em{border-bottom:1px solid #ccc;width:40%;display:block;text-transform:uppercase;}
@@ -163,7 +163,7 @@
   .cu_wrap .inner .btn>em,
   .cu_wrap .inner .btn>a{font-size:20px;padding:3px 20px;line-height:30px;}
 
-  .show_more_ctn{float:none;width:100%;margin:0 0 30px 0;}
+  .show_more_ctn{float:none;width:100%;height:auto;margin:0 0 30px 0;}
 }
 
 @media screen and (min-width:641px) and (max-width:1199px){
