--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -8,7 +8,7 @@
 		<a href="/blogs/blog_01"><img src="https://icdn2.digitaltrends.com/image/amazon-prime-day-packages-3-720x720.jpg" alt="Amazon Prime"></a>
 	</div>
 	<div class="inner">
-		<h3><a href="/blog/blog_01">"All About The Amazon Prime"</a></h3>
+		<h3><a href="/blogs/blog_01">"All About The Amazon Prime"</a></h3>
 		<p>Amazon Prime is a paid subscription service($119 per year currently, plus a free 30-day trial or $12.99 per month) offered by Amazon that gives users access to free two-day delivery (one-day in some areas), streaming video and music, and other benefits for a monthly or yearly fee.</p>
 		<div class="more_btn">
 			<a href="/blogs/blog_01">See more detail
