--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -137,6 +137,7 @@
 .cu_wrap .inner .btn>em{float:left;font-size:20px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:30px;}
 .cu_wrap .inner .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:30px;}
 
+.show_more_wrapper{margin-bottom:50px;}
 .show_more_box h2{margin-bottom:5px;}
 .show_more_ctn{float:left;width:31.33%;height:450px;margin:0 1% 30px 1%;}
 .show_more_ctn a{text-decoration:none;color:#3d3d3d;}
