--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -31,13 +31,13 @@
               <li>
                 <a href="#n">LAST 7 DAYS CODES LIST</a>
                 <ul>
-                  <li><a href="/promocodes_days/day_01">Apr. 10. 2019 </span></a></li>
-                  <!-- <li><a href="#n">Feb. 09. 2019  <span>(expration:02/15 ~ 03/15)</span></a></li>
-                  <li><a href="#n">Feb. 08. 2019</a></li>
-                  <li><a href="#n">Feb. 07. 2019</a></li>
-                  <li><a href="#n">Feb. 06. 2019</a></li>
-                  <li><a href="#n">Feb. 05. 2019</a></li>
-                  <li><a href="#n">Feb. 04. 2019</a></li> -->
+                  <li><a href="/promocodes_days/day_02">Apr. 14. 2019</a></li>
+                  <li><a href="/promocodes_days/day_01">Apr. 10. 2019</a></li>
+                  <!-- <li><a href="#n">Feb. 08. 2019</a></li> -->
+                  <!-- <li><a href="#n">Feb. 07. 2019</a></li> -->
+                  <!-- <li><a href="#n">Feb. 06. 2019</a></li> -->
+                  <!-- <li><a href="#n">Feb. 05. 2019</a></li> -->
+                  <!-- <li><a href="#n">Feb. 04. 2019</a></li> -->
                 </ul>
               </li>
             </ul>
