--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -78,6 +78,7 @@
                   </div>
                 <% end %>
              </div><!--./card_wrap-->
+             <%= will_paginate @gadgets %>
          </div><!--./on_gadgets-->
         </main>
 
